# AutoWISP

./: .gitignore  .pylintrc  10-464933_2_R1.hdf5.0  10-465248_2_R1.hdf5.0  README.md  README.rst  pyproject.toml  test.hdf5  test.py
.github/workflows/: run_tests.yml
SuperPhotPipeline/: PipelineExceptions.py
SuperPhotPipeline/ImageCalibration/: Calibrator.py  OverscanMethods.py  __init__.py
autowisp/: __init__.py  bui_util.py  catalog.py  evaluator.py  file_utilities.py  fits_utilities.py  hdf5_file.py  image_smoothing.py  image_utilities.py  iterative_rejection_util.py  meson.build  miscellaneous.py  piecewise_bicubic_psf_map.py  pipeline_exceptions.py  source_finder.py  source_finder_util.py  split_sources.py
autowisp/astrometry/: __init__.py  anmatch_transformation.py  astrometry.py  astrometry_net_client.py  healpix_utilities.py  (+2 more)
docs/: objects.inv
documentation/: Makefile  ProcessingSteps.md  make.bat
doxygen/: DoxygenLayout.xml
scripts/: calibrate_source_extraction_flux.py  changes_from_default_db.py  command_line_util.py  configparse.py  configparse_orm.py  create_snapshots.py  document_hdf5_structure.py  explore_shapefit_map.py  export_lcs.py  find_sources.py  generate_fit_term_parser.sh  magfit.py  mark_photometered_stars.py  plot_detrending_stat.py  plot_lc.py  plot_lc_scatter.py  read_config.py  tune_source_extraction_flux.py
superphot_pipeline/: .gitignore  Astrometry_new  Astrometry_new.py  Dump2hdf5.py  Dumptohdf5.py  __init__.py  catalog.py  data_reduction_file.py  evaluator.py  file_utilities.py  fits_utilities.py  general_purpose_stats.py  hdf5_file.py  image_smoother.py  image_smoothing.py  image_utilities.py  iterative_rejection_util.py  light_curve_file.py  magnitude_fitting.py  piecewise_bicubic_psf_map.py  pipeline_exceptions.py  processor.py  source_finder.py  source_finder_util.py  split_sources.py  tess_interface.py  test.hdf5
tests/: fake_raw_image.py  test_fit_terms_listeners.py  test_image_calibration.py
usage_examples/: add_astrometry_to_dr.py  create_lightcurves.py  epd.py  test_magfit.py  tfa_example.py
(+422 files in other folders)
